# gawk-extensions

./: Makefile.am  README.md  arrayfuncs.c  arrayfuncs.h  configure.ac  general.c  general.h  numfuncs.c  numfuncs.h
.github/workflows/: c-cpp.yml
python-side-project/: README.md  imdb.py  setup.py
